# mappability

./: .create_bit_v.cpp.kate-swp  .find2_index_approx_extension.h.kate-swp  .gitmodules  BUG DESCRIPTION  CMakeLists.txt  README.md  algo1.hpp  algo2.hpp  algo2_approx.hpp  algo3.hpp  algo4.hpp  auxiliary.h  benchmark.cpp  benchmark.sh  common.h  common_auxiliary.h  create_bit_v.cpp  create_bit_v_save.cpp  create_bit_v_temp.cpp  create_index.cpp  find2_index_approx_compmappable.h  find2_index_approx_compmappable2.h  find2_index_approx_extension.h  find2_index_approx_start_unidirectional.h  find2_index_approx_start_unidirectional2.h  find2_index_approx_unidirectional.h  global.h  heatmap.cpp  mappability.cpp  mappability_dump.cpp  mappability_marker.cpp  newStats.h  parse_results.sh  search.cpp  testIts.cpp  test_run-length_encoding.cpp  tests.cpp
old_code/: algo1.hpp  algo1_approx.hpp
